--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -9,8 +9,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="67dp"
+        android:layout_margin="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
