--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Test text"
+        android:hint="@string/title_edit_text_hint"
         android:textSize="30sp"/>
 
     <ImageButton
@@ -30,7 +30,7 @@
         android:layout_below="@id/title_edit_text"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Test text"
+        android:hint="@string/content_edit_text_hint"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
