--- a/app/src/main/res/layout/activity_display_note.xml
+++ b/app/src/main/res/layout/activity_display_note.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".view.DisplayNoteActivity">
 
     <TextView
@@ -13,7 +14,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="Test text"
-        android:textSize="30sp"/>
+        android:textColor="@android:color/white"
+        android:textSize="24sp"/>
 
     <TextView
         android:id="@+id/content_text_view"
@@ -22,6 +24,7 @@
         android:layout_below="@id/title_text_view"
         android:layout_margin="10dp"
         android:text="Test text"
+        android:textColor="@android:color/white"
         android:textSize="16sp"/>
 
     <ImageButton
@@ -30,6 +33,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:src="@android:drawable/ic_menu_revert" />
-
 
 </RelativeLayout>
