--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -9,9 +9,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="67dp"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:layout_marginBottom="5dp"
         app:cardCornerRadius="5dp"
+        app:cardBackgroundColor="@color/colorItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
@@ -25,7 +26,7 @@
                 android:id="@+id/title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:textColor="@color/colorItemTitleText"
                 android:text="title"
                 android:textSize="20sp" />
 
@@ -34,7 +35,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title_text"
-                android:padding="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:textColor="@color/colorItemContentText"
                 android:text="example text"
                 android:textSize="12sp" />
 
