--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorBackground">#1D1D1D</color>
+    <color name="colorFloatingButton">#CECECE</color>
+    <color name="colorItem">#474747</color>
+    <color name="colorItemTitleText">#FFFFFF</color>
+    <color name="colorItemContentText">#C2C2C2</color>
+    <color name="colorHintText">#9B9B9B</color>
+    <color name="colorEditTextUnderLine">#C9C9C9</color>
 </resources>
