--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -18,8 +18,8 @@
         app:layout_constraintTop_toTopOf="parent" >
 
         <RelativeLayout
-            android:layout_width="391dp"
-            android:layout_height="67dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_margin="10dp">
 
             <TextView
@@ -36,10 +36,18 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title_text"
                 android:paddingTop="5dp"
-                android:paddingBottom="5dp"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="@color/colorItemContentText"
                 android:text="example text"
                 android:textSize="12sp" />
+
+            <CheckBox
+                android:id="@+id/item_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
