--- a/app/src/main/res/layout/activity_note_list_view.xml
+++ b/app/src/main/res/layout/activity_note_list_view.xml
@@ -17,18 +17,28 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="15dp"
                 android:text="All notes"
                 android:textSize="20sp"
                 android:textColor="@color/colorItemTitleText"/>
+
+            <ImageButton
+                android:id="@+id/menu_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/menu"
+                android:background="@null"/>
 
         </RelativeLayout>
 
