--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -48,7 +48,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
