added button to the popup menu to delete the selected notes. Adding notes, updating and deleting them works now

--- a/app/src/main/res/menu/main_popup_menu.xml
+++ b/app/src/main/res/menu/main_popup_menu.xml
@@ -5,4 +5,8 @@
         android:id="@+id/select_notes_button"
         android:title="@string/popup_select_notes" />
 
+    <item
+        android:id="@+id/delete_notes_button"
+        android:title="@string/popup_delete_notes" />
+
 </menu>
