--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -32,9 +32,10 @@
 
             <TextView
                 android:id="@+id/content_text"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title_text"
+                android:layout_marginEnd="40dp"
                 android:paddingTop="5dp"
                 android:ellipsize="end"
                 android:maxLines="1"
