--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -49,7 +49,8 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:checked="false"/>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
