--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -35,13 +35,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title_text"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="100dp"
                 android:paddingTop="5dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/colorItemContentText"
                 android:text="example text"
                 android:textSize="12sp" />
+
+            <ImageView
+                android:id="@+id/note_image_view"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:layout_alignParentEnd="true" />
 
             <CheckBox
                 android:id="@+id/item_checkbox"
