--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -92,14 +92,29 @@
         android:layout_alignParentBottom="true"
         app:cardBackgroundColor="@color/colorLightBackground" >
 
-        <ImageButton
-            android:id="@+id/gallery_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:src="@drawable/gallery_icon"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <ImageButton
+                android:id="@+id/recorder_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/gallery_button"
+                android:layout_marginEnd="50dp"
+                android:background="@null"
+                android:src="@drawable/microphone"/>
+
+            <ImageButton
+                android:id="@+id/gallery_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"
+                android:background="@null"
+                android:src="@drawable/gallery_icon"/>
+
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
-
 </RelativeLayout>
