--- a/app/src/main/res/layout/activity_display_note.xml
+++ b/app/src/main/res/layout/activity_display_note.xml
@@ -46,39 +46,24 @@
         android:layout_height="match_parent"
         android:layout_below="@id/top_bar">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title_text_view"
+            <FrameLayout
+                android:id="@+id/display_note_text_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="Test text"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"/>
+                android:layout_gravity="center_horizontal"/>
 
-            <TextView
-                android:id="@+id/content_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/title_text_view"
-                android:layout_margin="10dp"
-                android:text="Test text"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"/>
+            <FrameLayout
+                android:id="@+id/display_note_image_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:id="@+id/note_image_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:layout_below="@id/content_text_view" />
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
-
-
 
 </RelativeLayout>
