--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -45,44 +45,34 @@
         android:layout_below="@id/top_bar"
         android:layout_above="@id/bottom_bar">
 
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/edit_note_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/title_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/colorEditTextUnderLine"
                 android:hint="@string/title_edit_text_hint"
                 android:textColorHint="@color/colorHintText"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"/>
 
-            <EditText
-                android:id="@+id/content_edit_text"
+            <FrameLayout
+                android:id="@+id/edit_note_text_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/title_edit_text"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/colorEditTextUnderLine"
-                android:hint="@string/content_edit_text_hint"
-                android:textColorHint="@color/colorHintText"
-                android:ems="10"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"/>
+                android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:id="@+id/note_image_view"
+            <FrameLayout
+                android:id="@+id/edit_note_image_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:layout_below="@id/content_edit_text" />
-        </RelativeLayout>
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
     </ScrollView>
 
     <androidx.cardview.widget.CardView
