--- a/app/src/main/res/layout/fragment_display_note_text.xml
+++ b/app/src/main/res/layout/fragment_display_note_text.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:id="@+id/display_note_text_fragment"
     tools:context=".view.activities.DisplayNoteActivity">
 
