--- a/app/src/main/res/layout/activity_note_list_view.xml
+++ b/app/src/main/res/layout/activity_note_list_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".view.activities.NoteListActivity">
+    tools:context=".notelist.NoteListActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/top_card_view"
@@ -51,7 +51,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_card_view" />
+        app:layout_constraintTop_toBottomOf="@+id/top_card_view">
+
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_note_floating_button"
