--- a/app/src/main/res/layout/fragment_audio_card.xml
+++ b/app/src/main/res/layout/fragment_audio_card.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:id="@+id/audio_card_fragment"
-    tools:context=".view.activities.EditNoteActivity">
+    tools:context=".noteedit.NoteEditActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/audio_card_view"
