--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:id="@+id/note_image_fragment"
-    tools:context=".view.activities.EditNoteActivity">
+    tools:context=".noteedit.NoteEditActivity">
 
         <ImageView
             android:id="@+id/note_image_view"
