--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -51,8 +51,7 @@
                 android:layout_marginEnd="40dp"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/capture"/>
+                android:layout_alignParentEnd="true" />
 
             <CheckBox
                 android:id="@+id/item_checkbox"
