--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -33,6 +33,11 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"/>
 
+        <FrameLayout
+            android:id="@+id/audio_card_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <ImageView
             android:id="@+id/note_image_view"
             android:layout_width="match_parent"
