--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -42,6 +42,7 @@
             android:id="@+id/note_image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:layout_margin="20dp" />
 
     </LinearLayout>
