--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -82,12 +82,29 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
-                        <ImageView
-                            android:id="@+id/note_image_view"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="20dp" />
+                            android:layout_height="wrap_content">
 
+                                <ImageView
+                                    android:id="@+id/note_image_view"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:adjustViewBounds="true"
+                                    android:layout_margin="20dp" />
+
+                                <ImageButton
+                                    android:id="@+id/remove_image_button"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="5dp"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_alignParentEnd="true"
+                                    android:background="@null"
+                                    android:src="@drawable/delete" />
+
+                        </RelativeLayout>
                 </LinearLayout>
         </ScrollView>
 
