--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -51,7 +51,18 @@
                 android:layout_marginEnd="40dp"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/capture"/>
+
+            <ImageView
+                android:id="@+id/sound_wave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/note_image_view"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/sound_wave"/>
 
             <CheckBox
                 android:id="@+id/item_checkbox"
